--- a/wwwroot/apps/admin/views/login/index.html
+++ b/wwwroot/apps/admin/views/login/index.html
@@ -56,8 +56,8 @@
           <img class="brand-img" src="/apps/admin/views/assets/images/logo@2x.png" alt="...">
           <h2 class="brand-text font-size-40">{{ websiteName }}后台管理</h2>
         </div>
-        <p class="font-size-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua.</p>
+        <!-- <p class="font-size-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua.</p> -->
       </div>
 
       <div class="page-login-main">
