--- a/weapp/pages/estimate/estimate.wxml
+++ b/weapp/pages/estimate/estimate.wxml
@@ -8,18 +8,17 @@
           <view class="weui-panel weui-panel_access">
             <view class="weui-panel__bd">
 
-
-            <block wx:for="{{iData.scids}}" wx:key="i" wx:for-index="ik" wx:for-item="iv">
+             <block wx:for="{{igData}}" wx:key="i" wx:for-index="k" wx:for-item="v"> 
 
               <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
                   <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-                      <image class="weui-media-box__thumb" src="{{domain}}/Admin/Uploads/{{iv.gid.cover_path[0]}}" />
+                      <image class="weui-media-box__thumb" src="{{domain}}{{v.img_path}}" />
                   </view>
                   <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-                      <view class="weui-media-box__title">{{iv.gid.cname}}【{{iv.gid.specification[iData.scids[ik].specification]}}】</view>
+                      <view class="weui-media-box__title g-title">「{{v.goods_specification}}」{{v.goods_name}}</view>
                       <view class="weui-media-box__desc">
-              <text class="commodity-prices">¥<block wx:if="{{iData.unit_price != '0.00'}}">{{iData.unit_price}}</block><block wx:else>{{iv.gid.promotion_price}}</block></text>
-              <text class="buy-quantity">x{{iData.scids[ik].quantity}}</text>
+                      <text class="commodity-prices">¥{{v.goods_price}}</text>
+                      <text class="buy-quantity">x{{v.quantity}}</text>
                       </view>
                   </view>
               </view>
@@ -28,14 +27,14 @@
                 <view class="weui-cell weui-cell_access weui-cell_link">
                     <view class="weui-cell__bd">
 
-                    <view wx:if="{{iv.gid.off === true}}">
+                    <view wx:if="{{v.status == 1}}">
 
                     <button class="weui-btn" type="primary" disabled="true">商品已评价</button>
                     </view>
 
                     <view wx:else>
 
-                    <button class="weui-btn" type="warn" bindtap="estimate" data-iid="{{iData.id}}" data-gid="{{iv.gid.id}}" data-specification="{{iv.gid.specification[iData.scids[ik].specification]}}">评价商品</button>
+                    <button class="weui-btn" type="warn" bindtap="estimate" data-iid="{{v.iid}}" data-gid="{{v.gid}}" data-goods_specification="{{v.goods_specification}}">立即评价</button>
 
                     </view>
 
@@ -45,7 +44,7 @@
                 </view>
             </view>
 
-             </block>
+              </block> 
         </view>
       </view>
   </view>
