--- a/wwwroot/apps/admin/views/layouts.html
+++ b/wwwroot/apps/admin/views/layouts.html
@@ -123,7 +123,7 @@
             <li class="site-menu-item has-sub">
               <a class="animsition-link" href="/admin/index/index" data-slug="dashboard" >
                 <i class="site-menu-icon wb-dashboard" aria-hidden="true"></i>
-                <span class="site-menu-title">首页</span>
+                <span class="site-menu-title">开发者信息</span>
               </a>
             </li>
             <li class="site-menu-item has-sub active open">
@@ -225,7 +225,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <!-- <li class="site-menu-item has-sub active open">
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">Layouts</span>
@@ -239,7 +239,7 @@
                   </a>
                 </li>
               </ul>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
